intro to cyborg ready

--- a/Cyborg/Seminars/Introduction to Cyborg Music.html
+++ b/Cyborg/Seminars/Introduction to Cyborg Music.html
@@ -23,10 +23,17 @@
 </div>
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.001.png'/><br><b>Humani Victus Instrumenta (The Instruments of Human Sustenance), Giuseppe Arcimboldo (ca. 1527)</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.002.png'/><br><b>Darth Vader, Start Wars original trilogy (1977-1983)</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.003.png'/><br><b>RoboCop (1987)</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.004.png'/><br><b>Ilustration of "No Woman Born" (1944), in cover of The Best of C.L. Moore</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.005.png'/><br><b>"After a Judgment Day" (1962) by Edmond Hamilton,</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.002.png'/><br><b>Darth Vader, Start Wars original trilogy (1977-1983)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.003.png'/><br><b>RoboCop (1987)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.004.png'/><br><b>Ilustration of "No Woman Born" (1944), in cover of The Best of C.L. Moore</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.005.png'/><br><b>"After a Judgment Day" (1962) by Edmond Hamilton</b></div>
+
+<p><pre class='code prettyprint lang-sc'>//Cyborgs and Space (1960) by Manfred E. Clynes and Nathan S. Kline
+"open http://web.mit.edu/digitalapollo/Documents/Chapter1/cyborgs.pdf".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.006.png'/><br><b>Cyborg (1972) by Martin Caidin</b></div>
 
@@ -37,10 +44,12 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.009.png'/><br><b>Les Baugh testing a robotic prosthetic - nytimes.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.010.png'/><br><b>Cyborg Evolution</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open https://youtu.be/KBuJqUfO4-w".unixCmd; //short documentary on Difference Engine</pre>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.006.png'/><br><b>Charles Babbage's plans for the Analytical Engine - computerhistory.org</b></div>
 
@@ -54,46 +63,30 @@
 "open https://youtu.be/shh1F6MgjV4".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.007.png'/><br><b>Only part of the Analytical Engine to be completed in Babbage's life - wikipedia.org</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.012.png'/><br><b>Colossus Computer (1943) by Tommy Flowers- wikipedia.org</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.011.png'/><br><b>Alan Turing</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.011.png'/><br><b>Alan Turing - biography.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.012.png'/><br><b>Benedict Cumberbatch as Alan Turing in The Imitation Game</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.013.png'/><br><b>Alan Turing</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.013.png'/><br><b>Alan Turing - britannica.com</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.015.png'/><br><b>Turing Test</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.015.png'/><br><b>The Imitation Game (1950) - Turing Test</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.014.png'/><br><b>Turing Test in Ex Machina (2015)</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.016.png'/><br><b>Claude E. Shannon</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.013.png'/><br><b>Harwell CADET (1953) - wikipedia.org</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.014.png'/><br><b>Die of Intel Pentium P54C - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.015.png'/><br><b>Binary Code</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.020.png'/><br><b>ENIAC programmers ca. 1946 - computerhistory.org</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.021.png'/><br><b>Programming the IBM 650 - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.014.png'/><br><b>Microprocessor (Integrated Circuit) - Die of Intel Pentium P54C - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.022.png'/><br><b>FORTRAN - blogspot.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.017.png'/><br><b>The Nervous System, including the Central Nervous System (CNS) and the Peripheral Nervous System (PNS)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.023.png'/><br><b>FORTRAN - blogspot.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.001.png'/><br><b>Assembly Code - wikipedia.org</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.002.png'/><br><b>Machine Code in monitor - wikipedia.org</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture3/lecture3.003.png'/><br><b>Compiler and Assembler - what-when-how.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.024.png'/><br><b>C code - googleapis.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.025.png'/><br><b>Python code - irawd.wordpress.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.026.png'/><br><b>SuperCollider code - warwick.ac.uk</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.017.png'/><br><b>The Nervous System, including the Central Nervous System (CNS) and the Peripheral Nervous System (PNS)</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.018.png'/><br><b>Brain depicted as digital autonomous system</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.018.png'/><br><b>Brain depicted as digital autonomous system</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.019.png'/><br><b>Dual-process theories of cognitive  functioning, goal structures of System 1 and 2, Stanovic (2005)</b></div>
 
@@ -109,28 +102,31 @@
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.025.png'/></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.026.png'/><br><b>Feminist Cyborg</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.027.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.026.png'/><br><b>We are all cyborgs: How machines can be a feminist tool - Illustration by 7iber (2019)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.027.png'/><br><b></b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.028.png'/><br><b></b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.029.png'/><br><b></b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.030.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.030.png'/><br><b>Cover of Simians, Cyborgs and Women: The Reinvention of Nature (1991) by Donna Haraway</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.031.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.031.png'/><br><b>Illustration by E. Benyaminson for Hello, I'm Robot! by Stanislav Zigunenko (1989)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.032.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.032.png'/><br><b>Michel Waisvisz using "The Hands" (1992)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.033.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.033.png'/><br><b>Laetitia Sonami with the "Lady's Gloves IV" (2001)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.034.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.034.png'/><br><b>Imogen Heap using "The Musical Gloves" (2012)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.035.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.035.png'/><br><b>Klaus Schultze, Electronic Musician - Tangerine Dream</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.036.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.036.png'/><br><b>Daft Punk - facebook.com</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.037.png'/><br><b></b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.037.png'/><br><b>Jason Barnes with prothetic robotic arm for drumming</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.038.png'/><br><b></b></div>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/cVFcJ3TMrok".unixCmd;</pre>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.038.png'/><br><b>Ex Machina (2015)</b></div>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp</a><br>link::Cyborg/Seminars/Introduction to Cyborg Music::<br>sc version: 3.8.0</div></div></body></html>
