new changes and add tutorial schedule

--- a/Cyborg/Seminars/Introduction to Cyborg Music.html
+++ b/Cyborg/Seminars/Introduction to Cyborg Music.html
@@ -112,7 +112,7 @@
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.030.png'/><br><b>Cover of Simians, Cyborgs and Women: The Reinvention of Nature (1991) by Donna Haraway</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.031.png'/><br><b>Illustration by E. Benyaminson for Hello, I'm Robot! by Stanislav Zigunenko (1989)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.031.png'/><br><b>Illustration by E. Benyaminson for "Hello, I'm Robot!" by Stanislav Zigunenko (1989)</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.032.png'/><br><b>Michel Waisvisz using "The Hands" (1992)</b></div>
 
