--- a/Cyborg.html
+++ b/Cyborg.html
@@ -32,7 +32,7 @@
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
-<li><a href="./Cyborg/Handbook.html">Handbook</a><li><a href="./Cyborg/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Cyborg/Handbook.html#Assessment">Assessment</a><li><a href="./Cyborg/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Cyborg/Assignment Briefs.html">Assignment Briefs</a><li><a href="./Cyborg/moduleplan.htm">Module Plan</a></ul>
+<li><a href="./Cyborg/Handbook.html">Handbook</a><li><a href="./Cyborg/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Cyborg/Handbook.html#Assessment">Assessment</a><li><a href="./Cyborg/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Cyborg/Assignment Briefs.html">Assignment Briefs</a><li><a href="./Cyborg/moduleplan.htm">Module Plan</a><li><a href="./Cyborg/tutorialschedule.htm">Tutorial Schedule</a></ul>
 <h3><a class='anchor' name='Seminars'>Seminars</a></h3>
 <ul>
 <li><a href="./Cyborg/Seminars/Introduction to Cyborg Music.html">Introduction to Cyborg Music</a><li>Computation and Music<li>Computational Creativity and Music 1<li>Computational Creativity and Music 2<li>Creativity and Music<li>Human-machine Interaction<li>Machine Listening<li>Machine Learning</ul>
