--- a/Cyborg/Practicals/Programming Concepts 1.html
+++ b/Cyborg/Practicals/Programming Concepts 1.html
@@ -124,7 +124,7 @@ lines
 )</pre>
 
 <p><strong>Remember</strong>: To stop the sound, press <em>cmd + .</em>
-<p>The computer ignores the comment (if you erase the comment it has no effect in the programme). If you forget to put the <code class='code prettyprint lang-sc'>//</code> before the comment, <code class='code prettyprint lang-sc'>/* */</code> around the comment, you will get an error though because your talking a different language here that is not for computers!<div class='note'><span class='notelabel'>NOTE:</span> Useful Shortcuts: <em>cmd + /</em> = comment or uncomment selection</div>
+<p>The computer ignores the comment (if you erase the comment it has no effect in the program). If you forget to put the <code class='code prettyprint lang-sc'>//</code> before the comment, <code class='code prettyprint lang-sc'>/* */</code> around the comment, you will get an error though because your talking a different language here that is not for computers!<div class='note'><span class='notelabel'>NOTE:</span> Useful Shortcuts: <em>cmd + /</em> = comment or uncomment selection</div>
 <p><strong>Exercise</strong>: copy the text bellow into an empty Document, then try to comment it in and out:<pre class='code prettyprint lang-sc'>try commenting this text and then uncomment it back!</pre>
 <h3><a class='anchor' name='Syntax%20Colourise'>Syntax Colourise</a></h3>
 
@@ -167,7 +167,7 @@ c = 3/4 //now c is 0.75
 a + b * c;</pre>
 <h3><a class='anchor' name='Punctuation'>Punctuation</a></h3>
 
-<p>By now you have seen the semicolon (;) used in computer code, but what is it doing? The semicolon is used as punctuation. It divides the code in different parts (and lines) that hold a logical progression. If you evaluate a long piece of code, you will need to use the semicolon to divide the different parts of the programme that need to be evaluated in order.
+<p>By now you have seen the semicolon (;) used in computer code, but what is it doing? The semicolon is used as punctuation. It divides the code in different parts (and lines) that hold a logical progression. If you evaluate a long piece of code, you will need to use the semicolon to divide the different parts of the program that need to be evaluated in order.
 <p>For a moment, consider this operation without the semicolon:<pre class='code prettyprint lang-sc'>(   //double click next to this parenthesis
 a = 100;
 a = a + 100;
