computation and music

--- a/Cyborg/Seminars/Computation and Music.html
+++ b/Cyborg/Seminars/Computation and Music.html
@@ -157,7 +157,7 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.032.png'/><br><b>Jean-Claude Rissett</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Jean-Claude Rissett, Mutations, 1969
-"open http://uniyork.naxosmusiclibrary.com.ezproxy.york.ac.uk/stream.asp?s=89558%2Funiyorknml09%2Frk4051%5F001".unixCmd;</pre>
+"open https://youtu.be/u83PZ1NN34s".unixCmd;</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.001.png'/><br><b>Laurie Spiegel</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//‘Old Wave’, 1974, GROOVE system
@@ -184,7 +184,7 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.004.png'/><br><b>Laurie Spiegel with the Groove System</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Voyager Interstellar Record, “Sounds of Earth” intro
-"open http://youtu.be/s-6CvmmcG0w".unixCmd;
+"open https://youtu.be/tkxP-9BEc8E".unixCmd;
 //Hunger Games (2012), Sediment (1972)
 "open http://youtu.be/02DvJvPppI0".unixCmd;</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.033.png'/><br><b>Lejaren Hiller</b></div>
@@ -200,7 +200,7 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.035.png'/><br><b>Herbert Brün</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Herbert Brun, Infraudibles, 1968
-"open http://youtu.be/H3BL4tHSyTg".unixCmd;</pre>
+"open https://youtu.be/psrNtbTnNQI".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.036.png'/><br><b>Iannis Xenakis</b></div>
 
@@ -217,7 +217,7 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.038.png'/><br><b>Peter Zinovieff with PDP-8 computer</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Documentary, What the Future Sounded Like, 2006
-"open http://youtu.be/8KkW8Ul7Q1I?t=10m26s".unixCmd;</pre>
+"open https://youtu.be/X-gVTM10Wsg?t=626".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.039.png'/><br><b>John Chowning with Yamaha DX7</b></div>
 
@@ -231,7 +231,9 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.042.png'/><br><b>John Chowning</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//John Chowning, Stria, 1977
-"open http://youtu.be/988jPjs1gao".unixCmd;</pre>
+"open http://youtu.be/988jPjs1gao".unixCmd;
+//Computer Chronicles: Computer Music (1984)
+"open https://youtu.be/8QTGLQq3DwU".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.043.png'/><br><b>Iannis Xenakis</b></div>
 
@@ -249,9 +251,11 @@
 "open http://anasynth.ircam.fr/home/english/media/singing-synthesis-chant-program".unixCmd;</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.047.png'/><br><b>Popular computers in 1980s</b></div>
 
-<p><pre class='code prettyprint lang-sc'>//Master Composer and Dr T’s Demo, 1988:
-"open http://youtu.be/hI8-oBgJFEY".unixCmd;</pre>
+<p><pre class='code prettyprint lang-sc'>//Computer Chronicles: Computer Music (1988) - Commodore 64, Master Composer and Dr T's
+"open https://youtu.be/XLBnW1ipyQ8?t=1133".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.048.png'/><br><b>Popular computers in 1990s</b></div>
 
-<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computation and Music.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computation and Music.schelp</a><br>link::Cyborg/Seminars/Computation and Music::<br>sc version: 3.8.0</div></div></body></html>
+<p><pre class='code prettyprint lang-sc'>//ProTools V.1 (1991)
+"open https://youtu.be/FEh-7Niw8lk?t=63".unixCmd;</pre>
+<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computation and Music.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computation and Music.schelp</a><br>link::Cyborg/Seminars/Computation and Music::<br>sc version: 3.8.0</div></div></body></html>
