--- a/Cyborg/Seminars/Computation and Music.html
+++ b/Cyborg/Seminars/Computation and Music.html
@@ -187,65 +187,7 @@
 "open https://youtu.be/tkxP-9BEc8E".unixCmd;
 //Hunger Games (2012), Sediment (1972)
 "open http://youtu.be/02DvJvPppI0".unixCmd;</pre>
-<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.033.png'/><br><b>Lejaren Hiller</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Lejaren Hiller, Illaic Suite, 1956
-"open https://youtu.be/QyqiSbbwHIs".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.034.png'/><br><b>Lejaren Hiller and John Cage</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//John Cage and Lejaren Hiller, HPSCHD, 1969
-"open http://youtu.be/t_hTxJpWITw".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.035.png'/><br><b>Herbert Brün</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Herbert Brun, Infraudibles, 1968
-"open https://youtu.be/psrNtbTnNQI".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.036.png'/><br><b>Iannis Xenakis</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Iannis Xenakis, Metastasis, 1964
-"open https://youtu.be/SZazYFchLRI".unixCmd;
-//Iannis Xenakis, ST/10, 1962
-"open https://youtu.be/9XZjCy18qrA".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.037.png'/><br><b>Gottfried Michael Koenig</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Gottfried Michael Koenig, Funktion Blau, 1969
-"open https://youtu.be/Yk7bXHeeKhI".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.038.png'/><br><b>Peter Zinovieff with PDP-8 computer</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Documentary, What the Future Sounded Like, 2006
-"open https://youtu.be/X-gVTM10Wsg?t=626".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.039.png'/><br><b>John Chowning with Yamaha DX7</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.040.png'/><br><b>Yamaha DX7</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.041.png'/><br><b>John Chowning at CCRMA</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//John Chowning, Turenas, 1972
-"open http://youtu.be/kSbTOB5ft5c".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.042.png'/><br><b>John Chowning</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//John Chowning, Stria, 1977
-"open http://youtu.be/988jPjs1gao".unixCmd;
-//Computer Chronicles: Computer Music (1984)
-"open https://youtu.be/8QTGLQq3DwU".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.043.png'/><br><b>Iannis Xenakis</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Iannis Xenakis, Polytope de Cluny, 1972-74
-"open https://youtu.be/nVx0PvK9TnQ".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.044.png'/><br><b>Charles Dodge</b></div>
-
-<p><pre class='code prettyprint lang-sc'>//Charles Dodge, In Celebration, 1975
-"open http://youtu.be/mYvSfCvXhNM".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.045.png'/><br><b>IRCAM</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.045.png'/><br><b>IRCAM</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Xavier Rodet, Queen of the Night, 1982
 "open http://anasynth.ircam.fr/home/english/media/singing-synthesis-chant-program".unixCmd;</pre>
