--- a/Cyborg/Seminars/Computational Creativity and Music 1.html
+++ b/Cyborg/Seminars/Computational Creativity and Music 1.html
@@ -22,7 +22,14 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Computation and Music.html">Computation and Music</a>, <a href="./../../Cyborg/Seminars/Creativity and Music.html">Creativity and Music</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar3/seminar3.001.png'/><br><b>AI-Da</b></div>
+
+<p><a href="https://time.com/5607191/robot-artist-ai-da-artificial-intelligence-creativity/">Time article about AI-Da</a>
+<p><a href="https://youtu.be/VCVgNDdlH4A">The Artist in the Machine?</a>
+<p><a href="https://youtu.be/XaZJG7jiRak">TED talk by AI-Da</a><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.038.png'/><br><b>Peter Zinovieff with PDP-8 computer in 1965</b></div>
+
+<p><a href="https://youtu.be/X-gVTM10Wsg?t=626">Documentary, What the Future Sounded Like, 2006</a>
+<p><a href="https://120years.net/tag/peter-zinovieff/">EMS and MUSYS system</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.002.png'/><br><b>In Handbook of Research on Creativity, 2013</b></div>
 
@@ -57,9 +64,7 @@ Pan2.ar(Gendy1.ar(6.rand,6.rand,1.0.rand,1.0.rand,freq ,freq, 1.0.rand, 1.0.rand
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.010.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/co9Q5BZDunI".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.011.png'/><br><b>Koan Pro and Generative Music 1 - intermorphic.com, iomoio.com</b></div>
+<p><a href="https://youtu.be/co9Q5BZDunI">Brian Eno, Atmospheric Lightness</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.011.png'/><br><b>Koan Pro and Generative Music 1 - intermorphic.com, iomoio.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.012.png'/></div>
 
@@ -229,22 +234,18 @@ b.free;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.023.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/Gq5B3M4jRtQ".unixCmd;</pre>
+<p><a href="https://youtu.be/kGnCQKRwMfc">Rex caeli, Domine maris (Musica enchiriadis)</a>
+<p><a href="https://youtu.be/ngCRm7uLirA">Leonin, Pascha Nostrum Organum Duplum</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.024.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.024.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
+<p><a href="https://youtu.be/An6r1KDD_S0">Josquin Desprez, De profundis</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.025.png'/></div>
 
-<p><strong>Josquin Desprez</strong> (c.1450-1521) - <em>De profundis</em><pre class='code prettyprint lang-sc'>"open https://youtu.be/An6r1KDD_S0".unixCmd;</pre>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.026.png'/></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.025.png'/></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.026.png'/></div>
+<p><a href="https://youtu.be/uH0SX8Knseo">Guillaume Dufay, Inclita stella maris</a>
+<p><a href="https://youtu.be/KHNMgDIk1QI".unixCmd">Johannes Ockeghem, L’homme armé</a>
+<p><a href="https://youtu.be/68N791msDt0">Johannes Ockeghem, Missa l’Homme Armé</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.027.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/uH0SX8Knseo".unixCmd; //Duffay
-"open https://youtu.be/KHNMgDIk1QI".unixCmd; //L’homme armé
-"open https://youtu.be/68N791msDt0".unixCmd; //Missa l’Homme Armé</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.027.png'/></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.028.png'/></div>
+<p><a href="https://youtu.be/ZuTxryuI81s">14 Verschiedene Canones, BWV 1087</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.028.png'/></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.029.png'/></div>
 
@@ -422,19 +423,8 @@ Pbind(\midinote, Pseq(~inversions.postln+48,inf), \ctranspose, Pseq(~circleTriad
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.035.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>"open http://sunsite.univie.ac.at/Mozart/dice/".unixCmd;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.036.png'/><br><b>David Cope - alchetron.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.037.png'/></div>
-
-<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/yFImmDsNGdE?t=45s".unixCmd; //Tech Closeup TV
-"open http://youtu.be/t6WeiyvAiYQ".unixCmd; //Chopin style
-"open http://youtu.be/R-_9zSSQK3o".unixCmd; //Joplin style</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
+<p><a href="http://www.playonlinedicegames.com/mozart">Musikalisches Würfelspiel generator</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.039.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/7qEu0kuoKEQ".unixCmd;</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 1.schelp</a><br>link::Cyborg/Seminars/Computational Creativity and Music 1::<br>sc version: 3.8.0</div></div></body></html>
+<p><a href="https://youtu.be/fD2IFSA7Koc">Brian Eno, I Dormienti</a><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 1.schelp</a><br>link::Cyborg/Seminars/Computational Creativity and Music 1::<br>sc version: 3.8.0</div></div></body></html>
