--- a/Cyborg/Seminars/Computation and Music.html
+++ b/Cyborg/Seminars/Computation and Music.html
@@ -100,7 +100,7 @@
 
 <p><a href="https://youtu.be/llnzK2H_HZo">Graphic 1, with L. Rosler, 1968</a><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.025.png'/><br><b>GROOVE system</b></div>
 
-<p><a href="https://youtu.be/6qhlvRm4iG4">Laurie Spiegel, Drums, 1975</a><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.026.png'/><br><b>Max Mathews with Radio Baton</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.026.png'/><br><b>Max Mathews with Radio Baton</b></div>
 
 <p><a href="http://youtu.be/Hloic1oBfug">Interview with Max Mathews &amp; John Chowning</a><a href="https://youtu.be/3ZOzUVD4oLg?t=5m52s">Radio Baton demonstration</a><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.027.png'/><br><b>Jean-Claude Rissett</b></div>
 
@@ -116,7 +116,7 @@
 
 <p><a href="https://youtu.be/u83PZ1NN34s">Jean-Claude Rissett, Mutations, 1969</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.001.png'/><br><b>Laurie Spiegel</b></div>
 
-<p><a href="http://youtu.be/OhpjHB4076g">‘Old Wave’, 1974, GROOVE system</a><a href="http://youtu.be/0Fy5ilFJENo">‘Voyages’, 1977, VAMPIRE system</a><a href="http://youtu.be/D-mmEvGOopk?t=30s">Music Mouse</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.002.png'/><br><b>Laurie Spiegel</b></div>
+<p><a href="https://youtu.be/6qhlvRm4iG4">Laurie Spiegel, Drums, 1975, GROOVE system</a><a href="http://youtu.be/OhpjHB4076g">‘Old Wave’, 1974, GROOVE system</a><a href="http://youtu.be/0Fy5ilFJENo">‘Voyages’, 1977, VAMPIRE system</a><a href="http://youtu.be/D-mmEvGOopk?t=30s">Music Mouse</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.002.png'/><br><b>Laurie Spiegel</b></div>
 
 <p><a href="https://pitchfork.com/features/article/9002-laurie-spiegel">Resident Visitor: Laurie Spiegel's Machine Music</a><a href="http://youtu.be/TzOJtZYsGSA?t=2m40s">Spiegel interview at Bell Labs</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar2/seminar2.003.png'/><br><b>Laurie Spiegel</b></div>
 
