--- a/Cyborg/Seminars/Computational Creativity and Music 1.html
+++ b/Cyborg/Seminars/Computational Creativity and Music 1.html
@@ -97,7 +97,7 @@ a = 4;
 b = Buffer.loadDialog(s); //you need to change the path to a soundfile in your computer
 
 (
-~tempo = 180;
+~tempo = 95; //change to bpm of track
 ~signature = 4;
 ~barlength= ~tempo/120;
 ~spb= (~barlength/~signature);
